# ai-engineering-demo

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  compose.yaml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  demo_improvement.md
.github/workflows/: compose.yml
apps/codex-rag-demo/: .dockerignore  Cargo.toml  Dockerfile  README.md
apps/codex-rag-demo/src/: main.rs
docs/: codex-demo-runbook.md  codex-failure-scenarios.md  codex-prompts.md  demo-runbook.md  docker-compose-stack.md  failure-drill.md  rag-demo.md  troubleshooting.md
docs/agents/: README.md
docs/agents/roles/: README.md
docs/agents/skills/: README.md
docs/agents/skills/stack-change/: SKILL.md
docs/codex-tasks/: 01-explain-stack.md  02-add-response-field.md  03-add-observability-metric.md  04-debug-rag-issue.md  05-update-documentation.md  README.md
docs/sample-knowledge/: codex-agent.md  demo-operations.md  llm-gateway.md  local-model.md  observability.md  vector-storage.md
infra/grafana/dashboards/: ai-stack-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/litellm/: config.yaml
infra/postgres/init/: 001_pgvector.sql
infra/vector/: vector.yaml
infra/victoriametrics/: promscrape.yml
scripts/: check.sh  codex-rag-demo.sh  demo-request.sh  doctor.sh  failure-drill.sh  generate-load.sh  ingest-knowledge.sh  print-urls.sh  rag-query.sh  smoke-test.sh
